MB-39532: Improve error messages from issue

A couple of the error messages that occurred in the issue
were incorrect and need minor improvements.

Change-Id: Iad1538010139782f52a6cf7335dd0561145ad496
Reviewed-on: http://review.couchbase.org/c/kv_engine/+/129154
Reviewed-by: Trond Norbye <trond.norbye@couchbase.com>
Tested-by: Build Bot <build@couchbase.com>